fix contrast of button

--- a/css/styles2.css
+++ b/css/styles2.css
@@ -152,7 +152,7 @@ input[type="text"], input[type="email"], textarea {
     width: 100%;
 }
 input[type="submit"] {
-    background-color: #28a745;
+    background-color: #6CC176;
     color: #fff;
     padding: 5px 0;
     border: none;
@@ -493,7 +493,7 @@ input[type="submit"]:hover {
         width: 100%;
     }
     input[type="submit"] {
-        background-color: #28a745;
+        background-color: #6CC176;
         color: #fff;
         padding: 5px 0;
         border: none;
@@ -814,7 +814,7 @@ input[type="submit"]:hover {
         width: 100%;
     }
     input[type="submit"] {
-        background-color: #28a745;
+        background-color: #6CC176;
         color: #fff;
         padding: 5px 0;
         border: none;
